<resources>
    <string name="app_name">Popular Movies</string>

    <string name="title">Title:</string>

    <string name="release_date">Release Date:</string>

    <string name="average_rating">Average Rating:</string>

    <string name="plot_synopsis">Plot Synopsis:</string>

    <string name="default_text">Default Text</string>

    <string name="error_message">Error in Loading Movies...</string>

    <string name="detail_error_message">Sandwich data not available</string>

    <string name="popular">Most Popular</string>

    <string name="highest_rated">Highest Rated</string>
</resources>
